Page MenuHome GnuPG

Invalid --sender option does not produce parseable output
Closed, ResolvedPublic

Description

If the --sender option gets an invalid email address, such as "root@example.com(crondaemon)", then there is no parseable output. This leads to unexpected errors in Enigmail:

gpg --batch --no-tty --status-fd 2 --sender "root@example.com(crondaemon)" --decrypt

--> gpg: "root@example.com(crondaemon)" is not a proper mail address

Details

Version
2.2.5

Event Timeline

werner triaged this task as High priority.
werner added a project: gnupg (gpg22).
werner added a subscriber: werner.

Okay. We need to add a FAILURE status so that gpgme can better report this invocation error. Due to the double fork it won't be able to see the exit status. I assume you have the same problem in Enigmail.

To be released with 2.26 next week